[project]
name = "disasterchat"
version = "0.1.0"
description = ""
authors = [
    {name = "wzx",email = "772618452wang@gmail.com"}
]
readme = "README.md"
requires-python = "<=3.13,>=3.11"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "ollama (>=0.4.7,<0.5.0)",
    "fastapi-cors (>=0.0.6,<0.0.7)",
    "pillow (>=11.1.0,<12.0.0)",
    "poetry-plugin-export (>=1.9.0,<2.0.0)",
    "numpy (>=1.26.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "aiomysql (>=0.2.0,<0.3.0)",
    "redis (>=5.2.1,<6.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "cryptography (>=44.0.2,<45.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

